--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:fontFamily="@font/notosanskr_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:textSize="20sp"
             android:textColor="@color/white"
             android:text="@string/text_start"
@@ -63,7 +63,7 @@
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:fontFamily="@font/notosanskr_bold"
+               android:fontFamily="@font/noto_sans_kr_bold"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:textColor="@color/main_theme_gray"
@@ -77,7 +77,7 @@
                android:id="@+id/textview_latest_result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:fontFamily="@font/notosanskr_bold"
+               android:fontFamily="@font/noto_sans_kr_bold"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/black"
@@ -90,7 +90,7 @@
                android:id="@+id/textview_latest_result_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:fontFamily="@font/notosanskr_bold"
+               android:fontFamily="@font/noto_sans_kr_bold"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:textColor="@color/main_theme_gray"
