--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -18,7 +18,7 @@
         android:id="@+id/textview_join_membership"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/join_membership"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="131dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/join_user_name"
         android:textColor="@color/black"
         android:textSize="14sp"
@@ -69,7 +69,7 @@
         android:id="@+id/textview_overlap_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/overlap_nikname"
         android:textColor="@color/general_theme_error"
         android:textSize="12sp"
@@ -81,7 +81,7 @@
         android:id="@+id/textview_invalid_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/invalid_nikname"
         android:textColor="@color/general_theme_error"
         android:textSize="12sp"
@@ -94,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/join_user_password"
         android:textColor="@color/black"
         android:textSize="14sp"
@@ -119,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/password_rule"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -132,7 +132,7 @@
         android:id="@+id/textview_password_usable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/password_usable"
         android:textColor="@color/main_theme_subcyan"
         android:textSize="12sp"
@@ -144,7 +144,7 @@
         android:id="@+id/textview_password_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/password_error"
         android:textColor="@color/general_theme_error"
         android:textSize="12sp"
