--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanskr_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:includeFontPadding="false"
             android:text="@string/text_welcome1"
             android:textColor="@color/white"
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:fontFamily="@font/notosanskr_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:includeFontPadding="false"
             android:text="@string/text_welcome2"
             android:textColor="@color/white"
@@ -51,7 +51,7 @@
         android:layout_marginTop="110dp"
         android:background="@drawable/bg_rectangle_round"
         android:backgroundTint="@color/white"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/sign_up"
         android:textColor="@color/main_theme_blue"
         android:textSize="18sp"
@@ -88,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/notosanskr_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:includeFontPadding="false"
         android:text="@string/text_welcome3"
         android:textColor="@color/white"
