--- a/app/src/main/res/layout/activity_problem_category.xml
+++ b/app/src/main/res/layout/activity_problem_category.xml
@@ -19,7 +19,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_medium"
+        android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:text="@string/whatis_problem"
         android:textAlignment="center"
@@ -69,7 +69,7 @@
                 android:id="@+id/text_power"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/notosanskr_medium"
+                android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/prob_power"
                 android:textColor="@color/black"
@@ -108,7 +108,7 @@
                 android:id="@+id/text_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/notosanskr_medium"
+                android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/prob_display"
                 android:textColor="@color/black"
@@ -147,7 +147,7 @@
                 android:id="@+id/text_use"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/notosanskr_medium"
+                android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/prob_use"
                 android:textColor="@color/black"
@@ -186,7 +186,7 @@
                 android:id="@+id/text_acc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/notosanskr_medium"
+                android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/prob_acc"
                 android:textColor="@color/black"
@@ -203,7 +203,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:text="@string/windows"
         android:textAlignment="center"
@@ -218,7 +218,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:text="@string/contact_ttukttak"
         android:textColor="@color/white"
@@ -236,7 +236,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:background="@drawable/bg_rectangle_round"
-        android:fontFamily="@font/notosanskr_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:includeFontPadding="false"
         android:text="@string/ask"
         android:textColor="@color/main_theme_blue"
