--- a/app/src/main/res/layout/activity_problem_yn.xml
+++ b/app/src/main/res/layout/activity_problem_yn.xml
@@ -21,7 +21,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_medium"
+        android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:textColor="@color/main_theme_gray"
         android:textSize="16sp"
@@ -35,7 +35,7 @@
         android:id="@+id/subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_medium"
+        android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -91,7 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="27dp"
-                    android:fontFamily="@font/notosanskr_bold"
+                    android:fontFamily="@font/noto_sans_kr_bold"
                     android:includeFontPadding="false"
                     android:text="@string/yes"
                     android:textColor="@color/black"
@@ -107,7 +107,7 @@
                 android:id="@+id/true_subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/notosanskr_medium"
+                android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:textColor="@color/main_theme_blue"
                 android:textSize="12sp"
@@ -140,7 +140,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:fontFamily="@font/notosanskr_regular"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
                     android:textColor="@color/main_theme_gray"
@@ -153,7 +153,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:fontFamily="@font/notosanskr_regular"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
                     android:textColor="@color/main_theme_gray"
@@ -166,7 +166,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:fontFamily="@font/notosanskr_regular"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
                     android:textColor="@color/main_theme_gray"
@@ -214,7 +214,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="27dp"
-                    android:fontFamily="@font/notosanskr_bold"
+                    android:fontFamily="@font/noto_sans_kr_bold"
                     android:includeFontPadding="false"
                     android:text="@string/no"
                     android:textColor="@color/black"
@@ -230,7 +230,7 @@
                 android:id="@+id/false_subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/notosanskr_medium"
+                android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:textColor="@color/main_theme_blue"
                 android:textSize="12sp"
@@ -263,7 +263,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:fontFamily="@font/notosanskr_regular"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
                     android:textColor="@color/main_theme_gray"
@@ -276,7 +276,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:fontFamily="@font/notosanskr_regular"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
                     android:textColor="@color/main_theme_gray"
@@ -289,7 +289,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:fontFamily="@font/notosanskr_regular"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
                     android:textColor="@color/main_theme_gray"
