--- a/app/src/main/res/layout/activity_settings_profile.xml
+++ b/app/src/main/res/layout/activity_settings_profile.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textview_profileSetting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/profile_settings"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -111,7 +111,7 @@
             android:id="@+id/textview_nikname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/input_nikname"
             android:textColor="@color/black"
             android:textSize="14sp" />
@@ -130,7 +130,7 @@
             android:layout_marginStart="11dp"
             android:background="@android:color/transparent"
             android:enabled="true"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:hint="@string/user_name"
             android:inputType="textPersonName"
             android:textColor="@color/black"
@@ -156,7 +156,7 @@
         android:id="@+id/textview_overlapNikname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/overlap_nikname"
         android:textColor="@color/general_theme_error"
         android:textSize="10sp"
@@ -180,7 +180,7 @@
             android:id="@+id/textview_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/input_email"
             android:textColor="@color/black"
             android:textSize="14sp" />
@@ -199,7 +199,7 @@
             android:layout_marginStart="11dp"
             android:background="@android:color/transparent"
             android:enabled="true"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:hint="@string/user_email"
             android:inputType="textEmailAddress"
             android:textColor="@color/black"
@@ -215,7 +215,7 @@
         android:backgroundTint="@color/main_theme_subblue"
         android:drawableEnd="@drawable/ic_front"
         android:drawableTint="@color/white"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:padding="5dp"
         android:text="@string/password_reset"
         android:textColor="@color/white"
