--- a/app/src/main/res/layout/activity_solution.xml
+++ b/app/src/main/res/layout/activity_solution.xml
@@ -20,7 +20,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_medium"
+        android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:textColor="@color/main_theme_gray"
         android:textSize="16sp"
@@ -34,7 +34,7 @@
         android:id="@+id/subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:textColor="@color/white"
         android:textSize="12sp"
@@ -76,7 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:fontFamily="@font/notosanskr_medium"
+                android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/solutions"
                 android:textColor="@color/white"
@@ -102,7 +102,7 @@
                     android:layout_marginVertical="4dp"
                     android:background="@drawable/bg_rectangle_round"
                     android:drawableEnd="@drawable/ic_question"
-                    android:fontFamily="@font/notosanskr_regular"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:padding="15dp"
                     android:textAlignment="textStart"
@@ -118,7 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="70dp"
-                android:fontFamily="@font/notosanskr_regular"
+                android:fontFamily="@font/noto_sans_kr_regular"
                 android:includeFontPadding="false"
                 android:text="@string/avail_problems"
                 android:textColor="@color/main_theme_gray"
@@ -135,7 +135,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="25dp"
-                android:fontFamily="@font/notosanskr_regular"
+                android:fontFamily="@font/noto_sans_kr_regular"
                 android:includeFontPadding="false"
                 android:textAlignment="center"
                 android:textColor="@color/white"
@@ -152,7 +152,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="22dp"
                 android:background="@drawable/bg_rectangle_round"
-                android:fontFamily="@font/notosanskr_bold"
+                android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
                 android:text="@string/ask"
                 android:textColor="@color/main_theme_blue"
@@ -166,7 +166,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_rectangle_round_line"
-                android:fontFamily="@font/notosanskr_bold"
+                android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
                 android:paddingHorizontal="38dp"
                 android:text="@string/complete"
