--- a/app/src/main/res/layout/activity_solution_desc.xml
+++ b/app/src/main/res/layout/activity_solution_desc.xml
@@ -21,7 +21,7 @@
         android:id="@+id/textview_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_medium"
+        android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:textColor="@color/main_theme_gray"
         android:textSize="16sp"
@@ -35,7 +35,7 @@
         android:id="@+id/textview_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:textColor="@color/main_theme_subcyan"
         android:textSize="12sp"
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:textColor="@color/black"
         android:textSize="14sp"
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:textColor="@color/main_theme_gray"
         android:textSize="12sp"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:textAlignment="textStart"
         android:textColor="@color/general_theme_error"
@@ -114,7 +114,7 @@
         android:layout_marginHorizontal="22dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/bg_rectangle_round_line"
-        android:fontFamily="@font/notosanskr_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:includeFontPadding="false"
         android:text="@string/go_next"
         android:textColor="@color/main_theme_blue"
