--- a/app/src/main/res/layout/activity_terms_use.xml
+++ b/app/src/main/res/layout/activity_terms_use.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="26dp"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:gravity="center"
             android:text="@string/use_terms"
             android:textColor="@color/black"
@@ -52,7 +52,7 @@
             android:id="@+id/textview_subTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:gravity="center"
             android:text="@string/personal_info_terms"
             android:textColor="@color/black"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="50dp"
             android:layout_marginTop="13dp"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:lineSpacingExtra="2sp"
             android:text="@string/use_terms_detail"
             android:textColor="@color/black"
