--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textview_ChangeSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/change_settings"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -62,7 +62,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/user_name"
             android:textColor="@color/black"
             android:textSize="14sp"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/user_email"
             android:textColor="@color/black"
             android:textSize="14sp"
@@ -123,7 +123,7 @@
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_front"
             android:drawableTint="@color/white"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/alert_setting"
             android:textAlignment="viewStart"
             android:textSize="16sp" />
@@ -140,7 +140,7 @@
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_front"
             android:drawableTint="@color/white"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/consumer_center"
             android:textAlignment="viewStart"
             android:textSize="16sp" />
@@ -167,7 +167,7 @@
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_front"
             android:drawableTint="@color/white"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/review"
             android:textAlignment="viewStart"
             android:textSize="16sp" />
@@ -184,7 +184,7 @@
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_front"
             android:drawableTint="@color/white"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/help"
             android:textAlignment="viewStart"
             android:textSize="16sp" />
@@ -201,7 +201,7 @@
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_front"
             android:drawableTint="@color/white"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/use"
             android:textAlignment="viewStart"
             android:textSize="16sp" />
@@ -213,7 +213,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/ttuckttak_version"
         android:textColor="@color/main_theme_gray"
         android:textSize="12sp"
@@ -227,7 +227,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/logout"
         android:textColor="@color/black"
         android:textSize="14sp"
