--- a/app/src/main/res/layout/activity_settings_alert.xml
+++ b/app/src/main/res/layout/activity_settings_alert.xml
@@ -16,7 +16,7 @@
         android:text="@string/alert_setting"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="49.5dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/event_push_alert"
         android:textColor="@color/black"
         android:textSize="14sp"
@@ -56,7 +56,7 @@
         android:text="@string/push_alert_add"
         android:textColor="@color/teal_700"
         android:textSize="10sp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         app:layout_constraintStart_toStartOf="@id/textview_eventPushAlert"
         app:layout_constraintTop_toBottomOf="@id/textview_eventPushAlert" />
 
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="55dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/night_time_alert"
         android:textColor="@color/black"
         android:textSize="14sp"
@@ -88,7 +88,7 @@
         android:id="@+id/textview_nightTimePushAlertAdditional"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/push_alert_add"
         android:textColor="@color/teal_700"
         android:textSize="10sp"
