--- a/app/src/main/res/layout/activity_solution_before.xml
+++ b/app/src/main/res/layout/activity_solution_before.xml
@@ -37,7 +37,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanskr_medium"
+            android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             android:textColor="@color/main_theme_gray"
             android:textSize="16sp"
@@ -51,7 +51,7 @@
             android:id="@+id/subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanskr_regular"
+            android:fontFamily="@font/noto_sans_kr_regular"
             android:includeFontPadding="false"
             android:textColor="@color/white"
             android:textSize="12sp"
@@ -93,7 +93,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
-                    android:fontFamily="@font/notosanskr_medium"
+                    android:fontFamily="@font/noto_sans_kr_medium"
                     android:includeFontPadding="false"
                     android:text="@string/simple_diagnose"
                     android:textColor="@color/white"
@@ -119,7 +119,7 @@
                         android:layout_marginVertical="4dp"
                         android:background="@drawable/bg_rectangle_round"
                         android:drawableEnd="@drawable/ic_question"
-                        android:fontFamily="@font/notosanskr_regular"
+                        android:fontFamily="@font/noto_sans_kr_regular"
                         android:includeFontPadding="false"
                         android:padding="15dp"
                         android:textAlignment="textStart"
@@ -135,7 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="70dp"
-                    android:fontFamily="@font/notosanskr_regular"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:text="@string/avail_problems"
                     android:textColor="@color/main_theme_gray"
@@ -152,7 +152,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="25dp"
-                    android:fontFamily="@font/notosanskr_regular"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
                     android:textColor="@color/white"
@@ -169,7 +169,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="22dp"
                     android:background="@drawable/bg_rectangle_round"
-                    android:fontFamily="@font/notosanskr_bold"
+                    android:fontFamily="@font/noto_sans_kr_bold"
                     android:includeFontPadding="false"
                     android:text="@string/find_solution"
                     android:textColor="@color/main_theme_blue"
@@ -183,7 +183,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_rectangle_round_line"
-                    android:fontFamily="@font/notosanskr_bold"
+                    android:fontFamily="@font/noto_sans_kr_bold"
                     android:includeFontPadding="false"
                     android:paddingHorizontal="38dp"
                     android:text="@string/complete"
