--- a/app/src/main/res/layout/activity_terms_promote.xml
+++ b/app/src/main/res/layout/activity_terms_promote.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:gravity="center"
         android:text="@string/promote_terms"
         android:textColor="@color/black"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="35dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:lineSpacingExtra="2sp"
         android:text="@string/promote_terms_detail"
         android:textColor="@color/black"
