--- a/app/src/main/res/layout/dialog_agree_terms.xml
+++ b/app/src/main/res/layout/dialog_agree_terms.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="33.5dp"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/agree_terms"
         android:textColor="@color/black"
         android:textSize="17sp"
@@ -44,7 +44,7 @@
             android:id="@+id/textview_use_terms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:paddingVertical="12.5dp"
             android:paddingStart="18.5dp"
             android:paddingEnd="0dp"
@@ -69,7 +69,7 @@
             android:id="@+id/textview_promote_terms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_bold"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:paddingVertical="12.5dp"
             android:paddingStart="18.5dp"
             android:paddingEnd="0dp"
