--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="DefaultButton" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@color/selector_default_button_text_color</item>
         <item name="android:background">@drawable/selector_default_button</item>
-        <item name="android:fontFamily">@font/noto_sans_bold</item>
+        <item name="android:fontFamily">@font/noto_sans_kr_bold</item>
         <item name="android:textSize">18sp</item>
     </style>
 
